# Abstract-VM

./: CMakeLists.txt  Makefile  README.md
exceptions/: AbstractStackExceptions.epp  LexerParserExceptions.epp  OperandExceptions.epp
includes/: AbstractStack.hpp  FileHandler.hpp  IOperand.hpp  Lexer.hpp  Operand.hpp  OperandFactory.hpp  Parser.hpp  Token.hpp  eOperandType.hpp
sources/: AbstractStack.cpp  AbstractStack.hpp  FileHandler.cpp  IOperand.hpp  Lexer.cpp  Lexer.hpp  Operand.cpp  Operand.hpp  Operand.tpp  OperandExceptions.cpp  OperandFactory.cpp  OperandFactory.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp  eOperandType.hpp  main.cpp
tests/dump/: good_numbers_2
